--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
         "@type": "PostalAddress",
         "streetAddress": "",
         "addressLocality": "{{ site.admin_city }}",
-        "addressRegion": "{{ site.admin_city }}",
+        "addressRegion": "{{ site.admin_state }}",
         "postalCode": ""
       },
       "telephone": ""
