added index, fixed footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,6 +29,6 @@
       <li><a href="mailto:{{ site.email }}" class="icon style2 far fa-envelope"><span class="label">Email</span></a></li>
       {% endif %}
     </ul>
-    <p>&copy; Habitry. Theme by <a href="https://html5up.net">HTML5 UP</a>.</p>
+    <p>&copy; {{ site.admin }}. Theme by <a href="https://html5up.net">HTML5 UP</a>.</p>
   </div>
 </footer>
